tests/snapshots/run_wpt_conformance__trtx_isInfinite_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "is_infinite.https.any.js",
    "isInfinite float16 1D tensor",
    "trtx",
    Failed {
        msg: Some(
            "is_infinite :: isInfinite float16 1D tensor: index 0: actual=0 expected=1 tolerance=0\n  inputs: isInfiniteInput: [String(\"Infinity\"), String(\"-Infinity\")]\n  expected isInfiniteOutput: [1, 1]\n  actual isInfiniteOutput: [0, 0]\n  expected isInfiniteOutput full nd:\n(shape [2])\n[1, 1]\n  actual isInfiniteOutput full nd:\n(shape [2])\n[0, 0]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    isInfiniteInput: f16[2];\n  }\n\n  nodes {\n    [isInfiniteOutput] = isInfinite(isInfiniteInput, label=\"\");\n  }\n\n  outputs { isInfiniteOutput; }\n}\n",
        ),
    },
)
