tests/snapshots/run_wpt_conformance__trtx_isInfinite_float16_special_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "is_infinite.https.any.js",
    "isInfinite float16 special values",
    "trtx",
    Failed {
        msg: Some(
            "is_infinite :: isInfinite float16 special values: index 0: actual=0 expected=1 tolerance=0\n  inputs: isInfiniteInput: [String(\"Infinity\"), String(\"-Infinity\"), String(\"NaN\"), 0, 0, 1, -1]\n  expected isInfiniteOutput: [1, 1, 0, 0, 0, 0, 0]\n  actual isInfiniteOutput: [0, 0, 128, 63, 0, 0, 128]\n  expected isInfiniteOutput full nd:\n(shape [7])\n[1, 1, 0, 0, 0, 0, 0]\n  actual isInfiniteOutput full nd:\n(shape [7])\n[0, 0, 128, 63, 0, 0, 128]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    isInfiniteInput: f16[7];\n  }\n\n  nodes {\n    [isInfiniteOutput] = isInfinite(isInfiniteInput, label=\"\");\n  }\n\n  outputs { isInfiniteOutput; }\n}\n",
        ),
    },
)
