tests/snapshots/run_wpt_conformance__trtx_isInfinite_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "is_infinite.https.any.js",
    "isInfinite float32 4D tensor",
    "trtx",
    Failed {
        msg: Some(
            "is_infinite :: isInfinite float32 4D tensor: index 1: actual=0 expected=1 tolerance=0\n  inputs: isInfiniteInput: [1, String(\"Infinity\"), -2.5, 0, String(\"NaN\"), String(\"-Infinity\"), 3.14, String(\"Infinity\"), 0, 42, String(\"-Infinity\"), -999.99, 10000000000, -0.0000000001, String(\"Infinity\"), 100.5]\n  expected isInfiniteOutput: [0, 1, 0, 0, 0, 1, 0, 1, 0, 0 ...] (len=16)\n  actual isInfiniteOutput: [0, 0, 0, 0, 0, 0, 128, 63, 0, 0 ...] (len=16)\n  expected isInfiniteOutput full nd:\n[0, 1, 0, 0, 0, 1, 0, 1, 0, 0, ...] (len=16, shape=[2, 2, 2, 2])\n  actual isInfiniteOutput full nd:\n[0, 0, 0, 0, 0, 0, 128, 63, 0, 0, ...] (len=16, shape=[2, 2, 2, 2])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    isInfiniteInput: f32[2, 2, 2, 2];\n  }\n\n  nodes {\n    [isInfiniteOutput] = isInfinite(isInfiniteInput, label=\"\");\n  }\n\n  outputs { isInfiniteOutput; }\n}\n",
        ),
    },
)
