tests/snapshots/run_wpt_conformance__trtx_isInfinite_float32_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "is_infinite.https.any.js",
    "isInfinite float32 5D tensor",
    "trtx",
    Failed {
        msg: Some(
            "is_infinite :: isInfinite float32 5D tensor: index 1: actual=0 expected=1 tolerance=0\n  inputs: isInfiniteInput: [1, String(\"Infinity\"), -2.5, 0, String(\"NaN\"), String(\"-Infinity\"), 3.14, String(\"Infinity\"), 0, 42, String(\"-Infinity\"), -999.99, 10000000000, -0.0000000001, String(\"Infinity\"), 100.5, 0.5, String(\"Infinity\"), -1, 2, String(\"-Infinity\"), 7.7, -8.8, 9.9 ...] (len=32)\n  expected isInfiniteOutput: [0, 1, 0, 0, 0, 1, 0, 1, 0, 0 ...] (len=32)\n  actual isInfiniteOutput: [0, 0, 0, 0, 0, 0, 128, 63, 0, 0 ...] (len=32)\n  expected isInfiniteOutput full nd:\n[0, 1, 0, 0, 0, 1, 0, 1, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n  actual isInfiniteOutput full nd:\n[0, 0, 0, 0, 0, 0, 128, 63, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    isInfiniteInput: f32[2, 2, 2, 2, 2];\n  }\n\n  nodes {\n    [isInfiniteOutput] = isInfinite(isInfiniteInput, label=\"\");\n  }\n\n  outputs { isInfiniteOutput; }\n}\n",
        ),
    },
)
